@@ -3,7 +3,7 @@
 ;;   for ATMEL AVR micro controllers.
 ;;   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2004, 2005, 2006, 2007, 2008
 ;;   Free Software Foundation, Inc.
-;;   Contributed by Denis Chertykov (denisc@overta.ru)
+;;   Contributed by Denis Chertykov (chertykov@gmail.com)
 
 ;; This file is part of GCC.
 
